--- a/TIL/11-17-2022/11-2022.md
+++ b/TIL/11-17-2022/11-2022.md
@@ -182,6 +182,62 @@ FreeCodeCamp - javascript-algorithms-and-data-structures/basic-javascript
   b += 9;
   c += 7;
   
+  Compound Assignment With Augmented Subtraction
+  Convert the assignments for a, b, and c to use the -= operator.
+  let a = 11;
+  let b = 9;
+  let c = 3;
+
+  // Only change code below this line
+  a -= 6;
+  b -= 15;
+  c -= 1;
+  
+  Compound Assignment With Augmented Multiplication
+  Convert the assignments for a, b, and c to use the *= operator.
+  let a = 5;
+  let b = 12;
+  let c = 4.6;
+
+  // Only change code below this line
+  a *= 5;
+  b *= 3;
+  c *= 10;
+  
+  Compound Assignment With Augmented Division
+  Convert the assignments for a, b, and c to use the /= operator.
+  let a = 48;
+  let b = 108;
+  let c = 33;
+ 
+  // Only change code below this line
+  a /= 12;
+  b /= 4;
+  c /= 11;
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
   
   
