--- a/TIL/11-17-2022/11-2022.md
+++ b/TIL/11-17-2022/11-2022.md
@@ -215,15 +215,29 @@ FreeCodeCamp - javascript-algorithms-and-data-structures/basic-javascript
   b /= 4;
   c /= 11;
   
+  Escaping Literal Quotes in Strings
+  
+  By trying severael times, I learned that we got to use " " quotes when declare and assign a string variable at the same time. 
+  Because of that, you need to use \ and quotation marks twice if you want to save literal quotes.   
+ 
+ For example, you want to print "Love is a game".
+ then you declare and assian a string variable and escape those quotes. 
+ 
+ let a = "\"Love is a game\"."
+ console.log(a); 
+  
+ then you get "Love is a game".
+ but if you just type a on developer tool, then you get '"Love is a game".'
+ a and console.log(a) are different in value. 
+ 
+ Use backslashes to assign a string to the myStr variable so that if you were to 
+ print it to the console,   you would see:
+ I am a "double quoted" string inside "double quotes".
+  
+ const myStr = "I am a \"double quoted\" string inside \"double quotes\"."; // Change this line 
   
   
-  
-  
-  
-  
-  
-  
-  
+ Quoting Strings with Single Quotes 
   
   
   
