--- a/TIL/11-17-2022/12-2022.md
+++ b/TIL/11-17-2022/12-2022.md
@@ -1,1 +1,27 @@
-test
+12-07
+Quoting Strings with Single Quotes
+Change the provided string to a string with single quotes at the beginning and end and no escape characters.
+Right now, the <a> tag in the string uses double quotes everywhere. You will need to change the outer quotes 
+to single quotes so you can remove the escape characters.
+const myStr = '<a href="http://www.example.com" target="_blank">Link</a>';
+
+To get the sentence, Finn responds, "Let's go!" 
+You do this:  
+let Str = 'Finn responds, "Let\'s go!"';
+console.log(Str)  
+  
+Escape Sequences in Strings
+Assign the following three lines of text into the single variable myStr using escape sequences.
+FirstLine
+    \SecondLine
+ThirdLine
+You will need to use escape sequences to insert special characters correctly. You will also need to follow the spacing as it looks above, with no spaces between escape sequences or words.
+Note: The indentation for SecondLine is achieved with the tab escape character, not spaces.  
+
+const myStr = "FirstLine\n\t\\SecondLine\nThirdLine"; // Change this line  
+  
+Concatenating Strings with Plus Operator
+Build myStr from the strings This is the start. and This is the end. using the + operator. Be sure to include a space between the two strings.
+const myStr = "This is the start. "+"This is the end."; // Change this line
+  
+Concatenating Strings with the Plus Equals Operator
