--- a/TIL/11-17-2022/12-2022.md
+++ b/TIL/11-17-2022/12-2022.md
@@ -25,3 +25,12 @@ Build myStr from the strings This is the start. and This is the end. using the +
 const myStr = "This is the start. "+"This is the end."; // Change this line
   
 Concatenating Strings with the Plus Equals Operator
+Build myStr over several lines by concatenating these two strings: This is the first sentence. and This is the second sentence. using the += operator. Use the += operator similar to how it is shown in the example and be sure to include a space between the two strings. Start by assigning the first string to myStr, then add on the second string.
+  
+let myStr = "This is the first sentence. ";
+myStr += "This is the second sentence."
+  
+Constructing Strings with Variables
+
+  
+  
