--- a/TIL/11-17-2022/12-2022.md
+++ b/TIL/11-17-2022/12-2022.md
@@ -31,6 +31,27 @@ let myStr = "This is the first sentence. ";
 myStr += "This is the second sentence."
   
 Constructing Strings with Variables
+Set myName to a string equal to your name and build myStr with myName between the strings My name is and and I am well!
+// Only change code below this line
+const myName = "Sangwan";
+const myStr = "My name is" + myName + "and I am well!";
+  
+Appending Variables to Strings
+Set someAdjective to a string of at least 3 characters and append it to myStr using the += operator.
+// Change code below this line
+const someAdjective = "fun";
+let myStr = "Learning to code is ";
+myStr += someAdjective; 
 
+Find the Length of a String
+Use the .length property to set lastNameLength to the number of characters in lastName.
+
+// Setup
+let lastNameLength = 0;
+const lastName = "Lovelace";
+
+// Only change code below this line
+lastNameLength = lastName;
+  
   
   
